# libwebview

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
bindings/go/libwebview/: app.go  app_test.go  go.mod  main.go  wrapper.go
bindings/go/libwebview/resources/: index.html  styles.css
bindings/go/libwebview/tests/: app_test.go
bindings/go/libwebview/wrapper/: wrapper.go
bindings/python/: LICENSE  pyproject.toml  setup.py
bindings/python/libwebview/: __init__.py  wrapper.py
bindings/python/libwebview/resources/: index.html
bindings/python/libwebview/tests/: test_app.py
bindings/python/src/libwebview/: __init__.py
bindings/python/src/libwebview/resources/: index.html  index.js
bindings/python/src/libwebview/tests/: test_app.py
cpp/: CMakeLists.txt
cpp/include/: above.h  mutex_queue.h  precompiled.h  string_utils.h  thread_queue.h  web_message.h  webui.h  webview.h
cpp/include/platform/: above_edge.h  edge.h  webui_cef.h  webui_edge.h  webui_webkit.h
cpp/src/: above.cpp  string_utils.cpp  test.cpp  thread_queue.cpp  webui.cpp  webview.cpp
cpp/src/platform/: above_edge.cpp  edge.cpp  webui_cef.cpp  webui_edge.cpp  webui_webkit.cpp
native/: CMakeLists.txt
native/include/: concurrent_queue.hpp  injection.hpp  mutex_queue.hpp  platform.hpp  precompiled.h  thread_queue.h  thread_queue.hpp  webview.h  webview.hpp
native/include/platform/: cef.hpp  edge.h  edge.hpp  platform.h  platform.hpp  webkit.hpp
native/src/: platform.cpp  thread_queue.cpp  webview.cpp
native/src/platform/: cef.cpp  edge.cpp  platform.cpp  webkit.cpp
native/tests/: async_test.cpp  cpp_test.cpp  sync_test.cpp
resources/: index.js
src/: index.html  index.js  main.py  webui.py
src/above/: __init__.py  wrapper.py
src/webui/: __init__.py  core.py  request.py  wrapper.py
