[project]
name = "libwebview"
version = "1.0.0"
authors = [
    { name = "Dmitriy Lukovenko", email = "mludima23@gmail.com" }
]
description = "Library for application development using WebView"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Android",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
]

[project.urls]
Source = "https://github.com/a3st/libwebview"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
libwebview = ["lib/x86_64/*.dll"]